fix: popup z-index

--- a/app/assets/stylesheets/responsive-search-results.scss
+++ b/app/assets/stylesheets/responsive-search-results.scss
@@ -30,6 +30,14 @@
 
 	}
 
+	.pageSearchResults {
+
+		.searchWrapperBig {
+			position: relative;
+			z-index: 1;
+		}
+	}
+
 }
 
 @media screen and (max-width: 1050px) {
